--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@
 .headline {
   display: flex;
   flex-direction: column;
-  background: #1C1A19;
+  background: #1c1a19;
   background-image: url("images/Illustration.svg");
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -45,44 +45,45 @@
   padding: 24px;
 }
 
-.hey{
-    font-family: "Crete Round";
-font-style: normal;
-font-weight: normal;
-font-size: 56px;
-line-height: 64px;
-letter-spacing: 0.37px;
-color: #FF6B00;
-margin: 0px;
-
+.hey {
+  font-family: "Crete Round", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 56px;
+  line-height: 64px;
+  letter-spacing: 0.37px;
+  color: #ff6b00;
+  margin: 0;
 }
 
 .iam {
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 15px;
-    color: #FFF5E1;
-    margin: 15px 0px;
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 15px;
+  color: #fff5e1;
+  margin: 15px 0;
 }
-.about{
-    font-family: Poppins;
-font-style: normal;
-font-weight: normal;
-font-size: 16px;
-line-height: 24px;
-color: white;
+
+.about {
+  font-family: Poppins, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+  color: white;
 }
-.social_media{
-    display: flex;
-    flex-direction: row;
+
+.social_media {
+  display: flex;
+  flex-direction: row;
 }
+
 .fa {
-font-size: 30px;
+  font-size: 30px;
   height: 50px;
   width: 50px;
   margin: 3px;
-  color: #DBD8D7;
+  color: #dbd8d7;
 }
-
