--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Crete+Round&family=Roboto:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
-body{
-  padding: 0px;
-  margin: 0px;
+body {
+  padding: 0;
+  margin: 0;
 }
 
 .toolbar {
