--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Crete+Round&family=Roboto:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;800&display=swap');
 body {
   padding: 0;
   margin: 0;
@@ -92,4 +92,88 @@ body {
   width: 50px;
   margin: 3px;
   color: #dbd8d7;
+}
+.recentworkContainer{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 24px;
+}
+
+.recentWork{
+  display: flex;
+  justify-content: center;
+  margin-top: 150px;
+  font-family: Crete Round;
+font-style: normal;
+font-weight: normal;
+font-size: 40px;
+line-height: 52px;
+}
+.recentWorkTitle{
+  font-family: Crete Round;
+font-style: normal;
+font-weight: normal;
+font-size: 32px;
+line-height: 44px;
+margin: 0px;
+margin-top: 24px;
+}
+.recentWorkDesc{
+  font-family: Inter;
+font-style: normal;
+font-weight: normal;
+font-size: 18px;
+line-height: 24px;
+}
+.line{
+  background: #7c6758;
+  height: 2px;
+  margin-bottom: 120px;
+}
+
+.usedTechs{
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0px;
+}
+.tech{
+  margin: 0px 12px;
+  margin-left: 0px;
+  line-height: 20px;
+  padding: 10px;
+ border: 1px solid #8993A4;
+}
+.seeProject{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #ff6b00;
+  width: 35%;
+  height: 48px;
+  margin-top: 14px;
+}
+
+.seeProject a {
+  text-align: center;
+text-decoration: none;
+font-family: Inter;
+font-style: normal;
+font-weight: bold;
+font-size: 17px;
+line-height: 24px;
+color: white; 
+}
+
+.works{
+  height: 3455px;
+  display: grid;
+  grid-template-rows: 2fr repeat(4, 1fr);
+  grid-template-columns: 1fr;
+}
+
+.workCard{
+  background-color: #ff6b00;
+  margin: 5px;
 }
