Update CSS and HTML

--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ body {
   border: 1px solid #8993a4;
 }
 
-.btn {
+.mybtn {
   background-color: #ff6b00;
   border: none;
   font-family: Inter, sans-serif;
