--- a/style.css
+++ b/style.css
@@ -328,7 +328,7 @@ body {
   text-align: center;
 }
 
-.textArea {
+.mytextArea {
   font-family: Inter, sans-serif;
   font-style: normal;
   font-weight: normal;
@@ -336,6 +336,7 @@ body {
   line-height: 24px;
   border: none;
   border-bottom: 1px solid #dbd8d7;
+  width: calc(100%-48px);
   padding: 14px;
   margin: 12px 0;
 }
@@ -349,6 +350,7 @@ body {
   color: #3c3a39;
   background: #fbf8f7;
   border: none;
+  width: calc(100%-48px);
   padding: 12px;
   margin: 12px 0;
 }
