--- a/style.css
+++ b/style.css
@@ -327,8 +327,7 @@ body {
   line-height: 44px;
   text-align: center;
 }
-
-.mytextArea {
+input [type=text]{
   font-family: Inter, sans-serif;
   font-style: normal;
   font-weight: normal;
@@ -340,6 +339,18 @@ body {
   padding: 14px;
   margin: 12px 0;
 }
+/* .mytextArea {
+  font-family: Inter, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 15px;
+  line-height: 24px;
+  border: none;
+  border-bottom: 1px solid #dbd8d7;
+  width: calc(100%-48px);
+  padding: 14px;
+  margin: 12px 0;
+} */
 
 .desc {
   font-family: Inter, sans-serif;
