--- a/style.css
+++ b/style.css
@@ -327,3 +327,20 @@ body {
   line-height: 44px;
   text-align: center;
 }
+
+.form {
+  width: 100%;
+}
+
+.form ul {
+  list-style: none;
+  padding: 0%;
+}
+
+.form li {
+  margin-bottom: 24px;
+}
+
+.form ul li * {
+  border: none;
+}
