--- a/style.css
+++ b/style.css
@@ -405,24 +405,28 @@ body {
 }
 
 @media (min-width: 600px) {
+  .toolbar{
+    padding: 0% 10%;
+    height: 72px;
+  }
   .name {
     font-size: 21px;
     line-height: 30px;
-    padding-left: 10%;
+    padding: 0%;
   }
   .menu {
     display: none;
   }
   .desktop_menu {
     display: flex;
-    flex-grow: 5;
+    flex-grow: 3;
     justify-content: space-evenly;
     align-items: center;
   }
   .d_menu_item {
     font-family: Inter;
     font-style: normal;
-    font-weight: 600;
+    font-weight: 530;
     font-size: 15px;
     line-height: 20px;
     color: white;
