Add desktop recentwork design

--- a/style.css
+++ b/style.css
@@ -117,6 +117,7 @@ body {
   font-weight: normal;
   font-size: 40px;
   line-height: 52px;
+  color: #091e42;
 }
 
 .recentWorkTitle {
@@ -470,5 +471,71 @@ body {
     order: -1;
     flex-direction: column;
     align-self: center;
+  }
+  .works {
+    margin: 0% 10%;
+  }
+  .recentWorkSectionTitle {
+    display: grid;
+    margin: 135px 0px;
+    grid-column: span 2;
+    grid-template-columns: 1fr 3fr;
+    align-items: center;
+  }
+  .recentworkContainer {
+    display: grid;
+    grid-template-columns: 3fr 2fr;
+  }
+  .recentWorkPic {
+    grid-column: 1;
+    grid-row: span 6;
+    width: 100%;
+    height: auto;
+    padding-bottom: 24px;
+  }
+  .recentWork {
+    margin: 0px;
+  }
+  .line {
+    margin: 0px;
+  }
+  .recentWorkTitle {
+    font-size: 40px;
+    line-height: 52px;
+    margin: 0%;
+    padding-left: 24px;
+  }
+  .works{
+    height: 2205px;
+    grid-template-rows: 1fr 2fr;
+  }
+  .recentWorkDesc {
+    grid-column: 2;
+    grid-row: span 2;
+    padding-left: 24px;
+    font-size: 22px;
+    line-height: 28px;
+  }
+  .usedTechs{
+    margin: auto;
+    margin-left: 0%;
+    padding-left: 24px;
+  }
+
+  .recentworkContainer .mybtn{
+    margin-left: 24px;
+  }
+  .workCards{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
+
+  .workCard{
+    margin-right: 24px;
+  }
+
+  .spwc{
+    display: none;
   }
 }
