--- a/style.css
+++ b/style.css
@@ -412,22 +412,26 @@ body {
     padding: 0% 10%;
     height: 72px;
   }
+
   .name {
     font-size: 21px;
     line-height: 30px;
     padding: 0%;
   }
+
   .menu {
     display: none;
   }
+
   .desktop_menu {
     display: flex;
     flex-grow: 3;
     justify-content: space-evenly;
     align-items: center;
   }
+
   .d_menu_item {
-    font-family: Inter;
+    font-family: Inter, sans-serif;
     font-style: normal;
     font-weight: 530;
     font-size: 15px;
@@ -435,58 +439,71 @@ body {
     color: white;
     text-decoration: none;
   }
+
   .toolicon {
     height: 18px;
     width: 18px;
     margin: 3px;
     color: white;
   }
+
   .intro {
     align-self: center;
   }
+
   .headline {
     display: grid;
     grid-template-columns: 10% 40% 50%;
     background-image: url("images/Illustration-desktop.svg");
     background-size: auto;
   }
+
   .hey {
     font-size: 72px;
     line-height: 81px;
   }
+
   .iam {
-    font-family: Inter;
+    font-family: Inter, sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 32px;
     line-height: 44px;
   }
+
   .about {
-    font-family: Inter;
+    font-family: Inter, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 20px;
     line-height: 32px;
   }
+
   .social_media_desktop {
     order: -1;
     flex-direction: column;
     align-self: center;
   }
+
   .works {
     margin: 0% 10%;
+    height: 2205px;
+    grid-template-rows: 1fr 2fr;
   }
+
   .recentWorkSectionTitle {
     display: grid;
-    margin: 135px 0px;
+    margin: 135px 0;
     grid-column: span 2;
     grid-template-columns: 1fr 3fr;
     align-items: center;
   }
+
   .recentworkContainer {
     display: grid;
     grid-template-columns: 3fr 2fr;
   }
+
   .recentWorkPic {
     grid-column: 1;
     grid-row: span 6;
@@ -494,22 +511,22 @@ body {
     height: auto;
     padding-bottom: 24px;
   }
+
   .recentWork {
-    margin: 0px;
+    margin: 0;
   }
+
   .line {
-    margin: 0px;
+    margin: 0;
   }
+
   .recentWorkTitle {
     font-size: 40px;
     line-height: 52px;
     margin: 0%;
     padding-left: 24px;
   }
-  .works {
-    height: 2205px;
-    grid-template-rows: 1fr 2fr;
-  }
+
   .recentWorkDesc {
     grid-column: 2;
     grid-row: span 2;
@@ -517,6 +534,7 @@ body {
     font-size: 22px;
     line-height: 28px;
   }
+
   .usedTechs {
     margin: auto;
     margin-left: 0%;
@@ -526,6 +544,7 @@ body {
   .recentworkContainer .mybtn {
     margin-left: 24px;
   }
+
   .workCards {
     display: grid;
     padding-bottom: 130px;
@@ -544,15 +563,15 @@ body {
     border: 2px solid black;
   }
 
+  .spwc {
+    display: none;
+  }
+
   .workCard:hover .spwc {
     display: block;
   }
 
   .workCard:hover .workCardContent {
-    display: none;
-  }
-
-  .spwc {
     display: none;
   }
 
@@ -573,7 +592,7 @@ body {
     width: 50%;
     padding: 0%;
     font-size: 24px;
-line-height: 36px;
+    line-height: 36px;
   }
 
   .getResume {
@@ -592,24 +611,29 @@ line-height: 36px;
     grid-template-columns: repeat(3, 1fr);
     margin-bottom: 100px;
   }
+
   .skillCategory {
     align-self: baseline;
   }
+
   .skillTitle {
     order: -1;
   }
+
   .skill {
     display: block;
     align-self: baseline;
   }
+
   .contactMe {
     height: 590px;
     margin: 0% 10%;
     padding-top: 100px;
     display: grid;
     grid-template-columns: 2fr 3fr;
-    grid-column-gap: 24px ;
+    grid-column-gap: 24px;
   }
+
   .contactDesc {
     font-size: 40px;
     line-height: 52px;
@@ -621,11 +645,11 @@ line-height: 36px;
     width: 162px;
   }
 
-  .myfooter{
-    padding: 28px 0px;
+  .myfooter {
+    padding: 28px 0;
   }
 
-  .footerLine{
+  .footerLine {
     display: none;
   }
 }
