--- a/style.css
+++ b/style.css
@@ -91,6 +91,11 @@ body {
   flex-direction: row;
   font-size: 20px;
   padding: 0;
+  list-style: none;
+}
+
+.myfooter .social_media li a * {
+  color: #505f79;
 }
 
 .fa {
@@ -588,6 +593,7 @@ body {
   }
 
   .aboutmeDesc {
+    font-family: Inter, sans-serif;
     width: 50%;
     padding: 0%;
     font-size: 24px;
@@ -656,7 +662,5 @@ body {
     list-style: none;
   }
 
-  .myfooter .social_media li a * {
-    color: #505f79;
-  }
+  
 }
