--- a/style.css
+++ b/style.css
@@ -91,25 +91,39 @@ body {
   display: none;
 }
 
+.menuitem {
+  /* grid-row: 2; */
+  display: flex;
+  flex-direction: column;
+  list-style:none;
+  /* display: block; */
+  font-family: 'Inter', sans-serif;
+  padding-top: 60%;
+
+}
+
+.menuLink {
+  text-decoration: none;
+  color : white;
+  font-family: Inter;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 4px;
+  letter-spacing: 0em;
+  text-align: left;
+  background-color: #3c3a39;
+  background:#3c3a39;
+  padding-right: 5%;
+  /* order:1 */
+  /* display: none; */
+}
+
 .menu {
-  flex-grow: 1;
-  cursor: pointer;
-}
-
-.menu_item {
-  width: 20px;
-  height: 2px;
-  background: white;
-  margin: 5px;
-  border-radius: 15px;
-}
-
-/* .menu {
-  position: fixed;
-  top: 0;
+  /* top: 0;
   left: 0;
   right: 0;
-  bottom: 0;
+  bottom: 0; */
   width: 100%;
   height: 100vh;
   background: black;
@@ -118,7 +132,10 @@ body {
   transition: transform 0.2s;
   list-style: none;
   padding-top: 4rem;
-} */
+  flex: 2 ;
+  cursor: pointer;
+  justify-items: flex-end;
+}
 
 
 .headline {
