--- a/style.css
+++ b/style.css
@@ -93,33 +93,35 @@ body {
 
 .menuitem {
   /* grid-row: 2; */
-  display: flex;
+  display: none;
   flex-direction: column;
   list-style:none;
   /* display: block; */
   font-family: 'Inter', sans-serif;
   background-color: #3c3a39;
   background:#3c3a39;
+  padding-bottom: 150%
 
 }
 
 .menuLink {
   text-decoration: none;
-  color : white;
+  color: #FFF5E1;
   font-family: Inter;
   font-size: 32px;
   font-style: normal;
   font-weight: 700;
- 
-  /* letter-spacing: 01.5em; */
+  letter-spacing:2;
   text-align: left;
   background-color: #3c3a39;
   background:#3c3a39;
-  padding-right: 5%;
-  /* order:1 */
-  /* display: none; */
 }
 
+hr {
+  display:block;
+  width: 100% 
+  border- solid 2px #6F6C6B;
+}
 .menu {
   /* top: 0;
   left: 0;
@@ -146,9 +148,9 @@ body {
   background-image: url("images/Illustration.svg");
   background-repeat: no-repeat;
   background-position: 100% bottom;
-  height: 88vh;
   justify-content: center;
-  padding: 24px;
+  height: 88vh;
+  padding: 0 24px;
 }
 
 .hey {
