--- a/style.css
+++ b/style.css
@@ -8,59 +8,6 @@ body {
   margin: 0;
 }
 
-/* SERGIO START */
-
-.menu-btn {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 80px;
-  height: 80px;
-  cursor: pointer;
-  transition: all .5s ease-in-out;
-  /* border: 3px solid #fff; */
-}
-.menuBtn__burger {
-  width: 50px;
-  height: 6px;
-  background: #fff;
-  border-radius: 5px;
-  box-shadow: 0 2px 5px rgba(255,101,47,.2);
-  transition: all .5s ease-in-out;
-}
-.menuBtn__burger::before,
-.menuBtn__burger::after {
-  content: '';
-  position: absolute;
-  width: 50px;
-  height: 6px;
-  background: #fff;
-  border-radius: 5px;
-  box-shadow: 0 2px 5px rgba(255,101,47,.2);
-  transition: all .5s ease-in-out;
-}
-.menuBtn__burger::before {
-  transform: translateY(-16px);
-}
-.menuBtn__burger::after {
-  transform: translateY(16px);
-}
-/* ANIMATION */
-.menu-btn.open .menuBtn__burger {
-  transform: translateX(-50px);
-  background: transparent;
-  box-shadow: none;
-}
-.menu-btn.open .menuBtn__burger::before {
-  transform: rotate(45deg) translate(35px, -35px);
-}
-.menu-btn.open .menuBtn__burger::after {
-  transform: rotate(-45deg) translate(35px, 35px);
-}
-
-/* SERGIO END */
-
 .toolbar {
   display: flex;
   background: #3c3a39;
@@ -91,55 +38,17 @@ body {
   display: none;
 }
 
-.menuitem {
-  /* grid-row: 2; */
-  display: none;
-  flex-direction: column;
-  list-style:none;
-  /* display: block; */
-  font-family: 'Inter', sans-serif;
-  background-color: #3c3a39;
-  background:#3c3a39;
-  padding-bottom: 150%
-
-}
-
-.menuLink {
-  text-decoration: none;
-  color: #FFF5E1;
-  font-family: Inter;
-  font-size: 32px;
-  font-style: normal;
-  font-weight: 700;
-  letter-spacing:2;
-  text-align: left;
-  background-color: #3c3a39;
-  background:#3c3a39;
-}
-
-hr {
-  display:block;
-  width: 100% 
-  border- solid 2px #6F6C6B;
-}
 .menu {
-  /* top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0; */
-  width: 100%;
-  height: 100vh;
-  background: black;
-  color: white;
-  transform: translateY(-100%);
-  transition: transform 0.2s;
-  list-style: none;
-  padding-top: 4rem;
-  flex: 2 ;
-  cursor: pointer;
-  justify-items: flex-end;
+  flex-grow: 1;
 }
 
+.menu_item {
+  width: 20px;
+  height: 2px;
+  background: white;
+  margin: 5px;
+  border-radius: 15px;
+}
 
 .headline {
   display: flex;
@@ -148,9 +57,9 @@ hr {
   background-image: url("images/Illustration.svg");
   background-repeat: no-repeat;
   background-position: 100% bottom;
-  justify-content: center;
   height: 88vh;
-  padding: 0 24px;
+  justify-content: center;
+  padding: 24px;
 }
 
 .hey {
@@ -778,4 +687,48 @@ hr {
   .footerLine {
     display: none;
   }
+}
+
+
+.menuexpand{
+  display: flex;
+  flex-direction: column;
+  width: 92vw;
+  height: 100vh;
+  /* align-items: flex-start; */
+  margin: 1008px 24px;
+}
+
+.menuexpand > a{
+  font-family: Inter;
+font-style: normal;
+font-weight: bold;
+font-size: 32px;
+line-height: 44px;
+  color:#FFF5E1;
+  text-decoration: none;
+  padding: 10px;
+  padding-top: 20px;
+}
+
+.expand{
+  display: none;
+}
+
+.closebtn{
+  align-self: last baseline;
+  /* justify-self: right; */
+  height: 20px;
+  width: 20px;
+  margin: 20px 0px;
+}
+
+hr{
+  padding: 0px;
+  margin: 0px;
+  background: white;
+}
+
+.height100{
+  height: 100vh;
 }
