--- a/style.css
+++ b/style.css
@@ -691,46 +691,47 @@ body {
   }
 }
 
-
-.menuexpand{
+.menuexpand {
   display: flex;
   flex-direction: column;
   width: 92vw;
   height: 100vh;
+
   /* align-items: flex-start; */
   margin: 1008px 24px;
 }
 
-.menuexpand > a{
-  font-family: Inter;
-font-style: normal;
-font-weight: bold;
-font-size: 32px;
-line-height: 44px;
-  color:#FFF5E1;
+.menuexpand > a {
+  font-family: Inter, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 32px;
+  line-height: 44px;
+  color: #fff5e1;
   text-decoration: none;
   padding: 10px;
   padding-top: 20px;
 }
 
-.expand{
+.expand {
   display: none;
 }
 
-.closebtn{
+.closebtn {
   align-self: last baseline;
+
   /* justify-self: right; */
   height: 20px;
   width: 20px;
-  margin: 20px 0px;
+  margin: 20px 0;
 }
 
-hr{
-  padding: 0px;
-  margin: 0px;
+hr {
+  padding: 0;
+  margin: 0;
   background: white;
 }
 
-.height100{
+.height100 {
   height: 100vh;
 }
