--- a/style.css
+++ b/style.css
@@ -431,6 +431,115 @@ body {
   margin-bottom: 8px;
 }
 
+.menuexpand {
+  display: flex;
+  flex-direction: column;
+  width: 92vw;
+  height: 100vh;
+
+  /* align-items: flex-start; */
+  margin: 1008px 24px;
+}
+
+.menuexpand > a {
+  font-family: Inter, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 32px;
+  line-height: 44px;
+  color: #fff5e1;
+  text-decoration: none;
+  padding: 10px;
+  padding-top: 20px;
+}
+
+.expand {
+  display: none;
+}
+
+.closebtn {
+  align-self: last baseline;
+  height: 20px;
+  width: 20px;
+  margin: 20px 0;
+}
+
+hr {
+  padding: 0;
+  margin: 0;
+  background: white;
+}
+
+.height100 {
+  height: 100vh;
+}
+
+.popup {
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  /* overflow: auto; */
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.popupWrapper {
+  display: grid;
+  height: 90%;
+  grid-template-columns: 1fr 20px;
+  grid-template-rows: 1fr 1fr 3fr 3fr 1fr;
+  background: white;
+  margin: 30px 16px;
+  overflow: auto;
+  padding: 16px;
+}
+
+.span2c {
+  grid-column: span 2;
+}
+
+.popupTitle {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  color: #172b4d;
+  font-size: 32px;
+  line-height: 44px;
+}
+.popupBody {
+  grid-column: span 2;
+}
+.popup p {
+  font-size: 22px;
+  padding-top: 10px;
+}
+.popupImage {
+  width: 100%;
+  height: auto;
+  grid-column: span 2;
+}
+
+.popupDesc {
+  font-family: Inter;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+.popup ul li {
+  margin: 10px;
+  margin-left: 0px;
+}
+
+.btnIcon {
+  height: 19px;
+  width: 19px;
+  padding-left: 10px;
+  text-align: center;
+}
+
 @media (min-width: 1000px) {
   .toolbar {
     padding: 0% 10%;
@@ -690,47 +799,28 @@ body {
   .footerLine {
     display: none;
   }
-}
-
-.menuexpand {
-  display: flex;
-  flex-direction: column;
-  width: 92vw;
-  height: 100vh;
-
-  /* align-items: flex-start; */
-  margin: 1008px 24px;
-}
-
-.menuexpand > a {
-  font-family: Inter, sans-serif;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 32px;
-  line-height: 44px;
-  color: #fff5e1;
-  text-decoration: none;
-  padding: 10px;
-  padding-top: 20px;
-}
-
-.expand {
-  display: none;
-}
-
-.closebtn {
-  align-self: last baseline;
-  height: 20px;
-  width: 20px;
-  margin: 20px 0;
-}
-
-hr {
-  padding: 0;
-  margin: 0;
-  background: white;
-}
-
-.height100 {
-  height: 100vh;
+  .popupWrapper {
+    height: 80%;
+    margin: 5%;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 25px;
+    padding: 24px;
+  }
+  .popupImage {
+    grid-column: span 1;
+  }
+  .popupBody {
+    grid-column: auto;
+  }
+  .popupDesc {
+    margin-bottom: 35vh;
+    font-size: 16px;
+    line-height: 30px;
+  }
+  .closebutn {
+    text-align: right;
+  }
+  .popupUsedTechs{
+    padding: 0px;
+  }
 }
