--- a/style.css
+++ b/style.css
@@ -509,10 +509,12 @@ hr {
 }
 .popupBody {
   grid-column: span 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .popup p {
   font-size: 22px;
-  padding-top: 10px;
 }
 .popupImage {
   width: 100%;
@@ -526,6 +528,10 @@ hr {
   font-weight: normal;
   font-size: 16px;
   line-height: 24px;
+}
+
+.btns button{
+  margin: 0px;
 }
 
 .popup ul li {
@@ -813,7 +819,7 @@ hr {
     grid-column: auto;
   }
   .popupDesc {
-    margin-bottom: 35vh;
+    margin: 0px;
     font-size: 16px;
     line-height: 30px;
   }
