--- a/style.css
+++ b/style.css
@@ -479,6 +479,7 @@ hr {
   z-index: 1;
   width: 100%;
   height: 100%;
+
   /* overflow: auto; */
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
@@ -500,22 +501,25 @@ hr {
 }
 
 .popupTitle {
-  font-family: Roboto;
+  font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: bold;
   color: #172b4d;
   font-size: 32px;
   line-height: 44px;
 }
+
 .popupBody {
   grid-column: span 2;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
+
 .popup p {
   font-size: 22px;
 }
+
 .popupImage {
   width: 100%;
   height: auto;
@@ -523,23 +527,30 @@ hr {
 }
 
 .popupDesc {
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 24px;
 }
 
-.btns button{
-  margin: 0px;
+.popupbtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  float: left;
+  font-size: 17px;
+  height: 48px;
+  margin-left: 10px;
 }
 
-.btns a{
-  text-decoration: none;
+.popupbtn img {
+  margin-left: 10px;
 }
+
 .popup ul li {
   margin: 10px;
-  margin-left: 0px;
+  margin-left: 0;
 }
 
 .btnIcon {
@@ -808,6 +819,7 @@ hr {
   .footerLine {
     display: none;
   }
+
   .popupWrapper {
     height: 80%;
     margin: 5%;
@@ -815,22 +827,27 @@ hr {
     column-gap: 25px;
     padding: 24px;
   }
+
   .popupImage {
     grid-column: span 1;
   }
+
   .popupBody {
     grid-column: auto;
   }
+
   .popupDesc {
-    margin: 0px;
+    margin: 0;
     font-size: 16px;
     line-height: 30px;
   }
+
   .closebutn {
     text-align: right;
     cursor: pointer;
   }
-  .popupUsedTechs{
-    padding: 0px;
+
+  .popupUsedTechs {
+    padding: 0;
   }
 }
