--- a/css/style.css
+++ b/css/style.css
@@ -233,7 +233,8 @@ body {
   justify-content: flex-end;
   flex-direction: column;
   align-items: baseline;
-  background: url(/images/workCardbg.png);
+  background:   linear-gradient(to bottom, rgba(255, 255, 255, 0.52), rgba(0, 0, 0, 0.73)),
+  url(/images/workCardbg.png);
   height: 446px;
   background-repeat: no-repeat;
   background-size: cover;
