--- a/css/style.css
+++ b/css/style.css
@@ -233,8 +233,9 @@ body {
   justify-content: flex-end;
   flex-direction: column;
   align-items: baseline;
-  background:   linear-gradient(to bottom, rgba(255, 255, 255, 0.52), rgba(0, 0, 0, 0.73)),
-  url(/images/workCardbg.png);
+  background:
+    linear-gradient(to bottom, rgba(255, 255, 255, 0.52), rgba(0, 0, 0, 0.73)),
+    url(/images/workCardbg.png);
   height: 446px;
   background-repeat: no-repeat;
   background-size: cover;
@@ -543,10 +544,11 @@ hr {
   float: left;
   font-size: 17px;
   height: 48px;
-  margin: 0px;
+  margin: 0;
   margin-right: 10px;
 }
-.popupbtn:hover{
+
+.popupbtn:hover {
   height: 44px;
   margin-right: 6px;
 }
