--- a/css/style.css
+++ b/css/style.css
@@ -234,7 +234,11 @@ body {
   flex-direction: column;
   align-items: baseline;
   background:
-    linear-gradient(to bottom, rgba(255, 255, 255, 0.52), rgba(0, 0, 0, 0.73)),
+    linear-gradient(
+      to bottom,
+      rgba(255, 255, 255, 0.52),
+      rgba(0, 0, 0, 0.73)
+    ),
     url(/images/workCardbg.png);
   height: 446px;
   background-repeat: no-repeat;
@@ -394,6 +398,17 @@ body {
 
 .desc::placeholder {
   color: #3c3a39;
+}
+
+.error {
+  margin-top: 10px;
+  font-family: Roboto, sans-serif;
+  text-align: center;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 15px;
+  line-height: 24px;
+  color: red;
 }
 
 .getInTouchBtn {
